2004-10-06  James Henstridge  <james@jamesh.id.au>

	* doc-build/omf.make (uninstall-local-omf): use $(DESTDIR) in
	uninstall rule.  This is needed to allow packages to distcheck
	with newer versions of automake.

2004-09-14  James Henstridge  <james@jamesh.id.au>

	* configure.in: bump version number to 2.8.0

2004-08-30  James Henstridge  <james@jamesh.id.au>

	* macros2/gnome-autogen.sh: fix up error message when a required
	M4 file isn't found.  Fixes bug #147417.

	* macros2/gnome-autogen.sh: Revert Rodney's changes, since
	glib-gettextize has been fixed on the HEAD and 2.4 branches.

2004-06-10  Rodney Dawes  <dobey@ximian.com>

	* macros2/gnome-autogen.sh: Add code to check for mkinstalldirs in
	the shared automake files directory, and copy it in if we are using
	AM_GLIB_GNU_GETTEXT

	Fixes #144069

2004-05-26  James Henstridge  <james@daa.com.au>

	* macros2/gnome-compiler-warnings.m4: some small cleanups.

	* macros2/gnome-common.m4 (GNOME_COMMON_INIT): since caching is
	turned off in all recent Autoconfs, it doesn't make sense to use
	it.  Change implementation to instead make sure ${ACLOCAL_FLAGS}
	gets passed to aclocal when called from the makefile.

	* macros2/Makefile.am: alter installation so that it puts the
	macros directly into $(datadir)/aclocal instead of
	$(datadir)/aclocal/gnome2-macros

	* autogen.sh (REQUIRED_AUTOMAKE_VERSION): use a modern version of
	automake.

	* macros2/gnome-compiler-flags.m4: move from compiler-flags.m4 to
	reduce chance of collisions.

	* macros2/gnome-autogen.sh: move from autogen.sh

	* Makefile.am (SUBDIRS): don't build bin/ and macros/ directories.

	* configure.in: don't create makefiles for bin/ and macros/
	directories.
	Since we don't actually build the support/ directory (since 2001),
	remove the matching parts from the configure script.

2004-05-13  James Henstridge  <james@daa.com.au>

	* gnome-common.spec.in: simplify and update spec file.

2004-02-27  Sven Herzberg  <herzi@abi02.de>
