@@ -5,9 +5,16 @@ dnl GNOME_COMMON_INIT
 
 AC_DEFUN([GNOME_COMMON_INIT],
 [
+  dnl this macro should come after AC_CONFIG_MACRO_DIR
+  AC_BEFORE([AC_CONFIG_MACRO_DIR], [$0])
+
   dnl ensure that when the Automake generated makefile calls aclocal,
   dnl it honours the $ACLOCAL_FLAGS environment variable
   ACLOCAL_AMFLAGS="\${ACLOCAL_FLAGS}"
+  if test -n "$ac_macro_dir"; then
+    ACLOCAL_AMFLAGS="-I $ac_macro_dir $ACLOCAL_AMFLAGS"
+  fi
+
   AC_SUBST([ACLOCAL_AMFLAGS])
 ])
 
